# Synthetic-Signal-Observatory

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  LEARNINGS.md  README.md  STATUS.md  TODO.md  app.py  pyproject.toml
docs/: context-summary.md
docs/planning/: REALTIME_DISPLAY_PLAN.md  SETUP_INSTRUCTIONS.md
synthetic_signal_observatory/: __init__.py  analytics.py  app_services.py  config.py  duckdb_persistence.py  generator.py  viz.py
tests/: conftest.py  test_analytics.py  test_app_services.py  test_config.py  test_duckdb_persistence.py  test_generator.py  test_viz.py
